--- a/Debate Website/ourteam.html
+++ b/Debate Website/ourteam.html
@@ -31,8 +31,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Tournaments</a></li>
-						<li><a href="elements.html">Our Team</a></li>
+						<li><a href="tournaments.html">Tournaments</a></li>
+						<li><a href="ourteam.html">Our Team</a></li>
 						<li><a href="#" class="button special" onclick="onSignUp()">Sign Up</a></li>
 						<li><a href="#" class="button special" onclick="onLogIn()">Log In</a></li>
 					</ul>
@@ -44,58 +44,15 @@
 				<div class="container">
 
 					<header class="major">
-						<h2>Elements</h2>
+						<h2>Our Team</h2>
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 
 					<!-- Table -->
 						<section>
 							<h3>Table</h3>
-							<h4>Default</h4>
-							<div class="table-wrapper">
-								<table>
-									<thead>
-										<tr>
-											<th>Name</th>
-											<th>Description</th>
-											<th>Price</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Item 1</td>
-											<td>Ante turpis integer aliquet porttitor.</td>
-											<td>29.99</td>
-										</tr>
-										<tr>
-											<td>Item 2</td>
-											<td>Vis ac commodo adipiscing arcu aliquet.</td>
-											<td>19.99</td>
-										</tr>
-										<tr>
-											<td>Item 3</td>
-											<td> Morbi faucibus arcu accumsan lorem.</td>
-											<td>29.99</td>
-										</tr>
-										<tr>
-											<td>Item 4</td>
-											<td>Vitae integer tempus condimentum.</td>
-											<td>19.99</td>
-										</tr>
-										<tr>
-											<td>Item 5</td>
-											<td>Ante turpis integer aliquet porttitor.</td>
-											<td>29.99</td>
-										</tr>
-									</tbody>
-									<tfoot>
-										<tr>
-											<td colspan="2"></td>
-											<td>100.00</td>
-										</tr>
-									</tfoot>
-								</table>
-							</div>
+		
+
 							<h4>Alternate</h4>
 							<div class="table-wrapper">
 								<table class="alt">
