--- a/Debate Website/index.html
+++ b/Debate Website/index.html
@@ -31,8 +31,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Tournaments</a></li>
-						<li><a href="elements.html">Our Team</a></li>
+						<li><a href="tournaments.html">Tournaments</a></li>
+						<li><a href="ourteam.html">Our Team</a></li>
 						<li><a href="#" class="button special" onclick="onSignUp()">Sign Up</a></li>
 						<li><a href="#" class="button special" onclick="onLogIn()">Log In</a></li>
 					</ul>
