--- a/Debate Website/ourteam.html
+++ b/Debate Website/ourteam.html
@@ -48,6 +48,19 @@
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 
+
+
+
+
+					<!--New Member Info -->
+						<section>
+
+							<h4>Who We Are</h4>
+							<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>We are a team of usually around 20 members.  Team members are from all classes - freshman through seniors.  Any student is welcome to join and we have no cuts.  We offer 3 types of Debate (Lincoln Douglas, Public Forum and Congressional).   </p>
+							<p><span class="image right"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+						</section>
+
+
 					<!-- Table -->
 						<section>
 							<h3>Table</h3>
@@ -99,6 +112,13 @@
 								</table>
 							</div>
 						</section>
+
+
+
+
+
+
+
 
 
 				</div>
