--- a/Debate Website/index.html
+++ b/Debate Website/index.html
@@ -54,7 +54,7 @@
 
 		<!-- Two -->
 			<section id="two" class="wrapper style2 special">
-				<div class="container">
+				<div class="container profiles">
 					<header class="major">
 						<h2>Making Debate Great Again</h2>
 						<p>One tournament at a time, our team is dedicated to improvement</p>
@@ -87,7 +87,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolore illum, temporibus veritatis eligendi, aliquam, dolor enim itaque veniam aut eaque sequi qui quia vitae pariatur repudiandae ab dignissimos ex!</p>
 						<ul class="actions">
 							<li>
-								<a href="#" class="button big">Lorem ipsum dolor sit</a>
+								<button class="button big" id="closesection">Minimize This</button>
 							</li>
 						</ul>
 					</footer>
