--- a/Debate Website/ourteam.html
+++ b/Debate Website/ourteam.html
@@ -55,9 +55,9 @@
 					<!--New Member Info -->
 						<section>
 
-							<h4>Who We Are</h4>
-							<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>We are a team of usually around 20 members.  Team members are from all classes - freshman through seniors.  Any student is welcome to join and we have no cuts.  We offer 3 types of Debate (Lincoln Douglas, Public Forum and Congressional).   </p>
-							<p><span class="image right"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+							<h3>Our Team</h3>
+							<p class="newmeminfo"><span class="image left"><img src="images/pflogo.png" alt="" /></span>We are a team of usually around 20 members.  Team members are from all classes - freshman through seniors.  Any student is welcome to join and we have no cuts.  We offer 3 types of Debate (Lincoln Douglas, Public Forum and Congressional) See the boxes below for more information on each of the individual events.   </p><br><br><br>
+							<p class="newmeminfo"><span class="image right"><img src="images/ldlogo.png" alt="" /></span>Students usually meet for practice on Monday and Wednesday evenings from 6:30pm until 8:30pm.  All practices are held at Whitman.  During practices students work with coaches and other students.  Many students choose to compete.  Competing is not mandatory but is encouraged.  There a monthly local tournaments run by WACFL that many students attend especially those new to Speech and Debate.</p>
 						</section>
 
 
