--- a/Debate Website/ourteam.html
+++ b/Debate Website/ourteam.html
@@ -7,7 +7,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Elements - Transit by TEMPLATED</title>
+		<title>Our Team</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -45,7 +45,7 @@
 
 					<header class="major">
 						<h2>Our Team</h2>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						
 					</header>
 
 
@@ -57,58 +57,41 @@
 
 							<h3>Our Team</h3>
 							<p class="newmeminfo"><span class="image left"><img src="images/pflogo.png" alt="" /></span>We are a team of usually around 20 members.  Team members are from all classes - freshman through seniors.  Any student is welcome to join and we have no cuts.  We offer 3 types of Debate (Lincoln Douglas, Public Forum and Congressional) See the boxes below for more information on each of the individual events.   </p><br><br><br>
-							<p class="newmeminfo"><span class="image right"><img src="images/ldlogo.png" alt="" /></span>Students usually meet for practice on Monday and Wednesday evenings from 6:30pm until 8:30pm.  All practices are held at Whitman.  During practices students work with coaches and other students.  Many students choose to compete.  Competing is not mandatory but is encouraged.  There a monthly local tournaments run by WACFL that many students attend especially those new to Speech and Debate.</p>
+							<p class="newmeminfo"><span class="image right"><img src="images/ldlogo.png" alt="" /></span>Students usually meet for practice on Monday and Wednesday evenings from 6:00pm until 7:30pm.  All practices are held at Elkhorn South, usually in room B129.  During practices students work with coaches and other students.  Many students choose to compete at local tournaments on the weekends. <a href="tournaments.html" class="formlinks">(See Schedule here)</a> Competing is not mandatory but is encouraged.</p>
 						</section>
 
 
 					<!-- Table -->
 						<section>
-							<h3>Table</h3>
+							<h3>Forms of Debate</h3>
 		
-
-							<h4>Alternate</h4>
 							<div class="table-wrapper">
 								<table class="alt">
 									<thead>
 										<tr>
 											<th>Name</th>
 											<th>Description</th>
-											<th>Price</th>
+											<th>More Info</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<td>Item 1</td>
-											<td>Ante turpis integer aliquet porttitor.</td>
-											<td>29.99</td>
+											<td>Public Forum</td>
+											<td>Teams of two debate current issues, receiving a new topic every month</td>
+											<td><a href="http://www.speechanddebate.org/publicforum" class="formlinks">PF</a></td>
 										</tr>
 										<tr>
-											<td>Item 2</td>
-											<td>Vis ac commodo adipiscing arcu aliquet.</td>
-											<td>19.99</td>
+											<td>Lincoln Douglas</td>
+											<td>1v1 style in which debaters argue over moral and value related resolutions, receiving a new topic every two months</td>
+											<td><a href="http://www.speechanddebate.org/lincolndouglas" class="formlinks">LD</a></td>
 										</tr>
 										<tr>
-											<td>Item 3</td>
-											<td> Morbi faucibus arcu accumsan lorem.</td>
-											<td>29.99</td>
-										</tr>
-										<tr>
-											<td>Item 4</td>
-											<td>Vitae integer tempus condimentum.</td>
-											<td>19.99</td>
-										</tr>
-										<tr>
-											<td>Item 5</td>
-											<td>Ante turpis integer aliquet porttitor.</td>
-											<td>29.99</td>
+											<td>Congressional</td>
+											<td>Modeled after US congress, competitors debate potential bills making their way through congress</td>
+											<td><a href="http://www.speechanddebate.org/congress" class="formlinks">Congress</a></td>
 										</tr>
 									</tbody>
-									<tfoot>
-										<tr>
-											<td colspan="2"></td>
-											<td>100.00</td>
-										</tr>
-									</tfoot>
+
 								</table>
 							</div>
 						</section>
