--- a/Debate Website/index.html
+++ b/Debate Website/index.html
@@ -7,7 +7,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Fancy Template</title>
+		<title>Elkhorn Debate</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -45,7 +45,7 @@
 				<p>Just Be Cool</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">Meet The Team</a>
+						<a href="ourteam.html" class="button big">Meet The Team</a>
 					</li>
 
 				</ul>
